syntax = "proto3";

package stats.service.dashboard;

import "stats/messages/analyzer/user_predictions_request.proto";
import "stats/messages/analyzer/similar_events_request.proto";
import "stats/messages/analyzer/interactions_count_request.proto";
import "stats/messages/analyzer/recommended_event.proto";

option java_package = "ru.practicum.ewm.stats.proto";

service RecommendationsController {
  rpc GetRecommendationsForUser (stats.message.UserPredictionsRequestProto)
      returns (stream stats.message.RecommendedEventProto);

  rpc GetSimilarEvents (stats.message.SimilarEventsRequestProto)
      returns (stream stats.message.RecommendedEventProto);

  rpc GetInteractionsCount(stats.message.InteractionsCountRequestProto)
      returns (stream stats.message.RecommendedEventProto);
  }